Added David's references

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,6 +1,14 @@
 \begin{thebibliography}{99}
 \bibitem{spade_icecube} IceCube Data Movement \url{https://icecube.wisc.edu/science/data/datamovement}.
-\bibitem{spade_dayabay}Data processing and storage in the Daya Bay Reactor Antineutrino Experimentt \url{http://arxiv.org/pdf/1501.06969.pdf}.
+\bibitem{spade_dayabay}Data processing and storage in the Daya Bay Reactor Antineutrino Experiment \url{http://arxiv.org/pdf/1501.06969.pdf}.
 \bibitem{atlas_express} Prompt reconstruction of LHC collision data with the ATLAS reconstruction software, N.Barlow et al, \textit{Journal of Physics: Conference Series 331 (2011) 032004}
 
+\bibitem{montanari_35ton} First scientific application of the membrane cryostat technology, D.Montanari et al, \textit{AIP Proceedings 1573, 1664 (2014)} \url{http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4860907}
+
+ \bibitem{acciarri_sbn_proposal} A Proposal for a Three Detector Short-Baseline Neutrino Oscillation Program in the Fermilab Booster Neutrino Beam \textit{R.Acciarri et al} \url{http://arxiv.org/abs/1503.01520}
+ 
+% Add if doc can be made public in docdb -- AH 
+% \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
+% \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25–ICMC 2014, LBNE Docid 9270} 
+ 
 \end{thebibliography}
