--- a/cryo.tex
+++ b/cryo.tex
@@ -1,7 +1,8 @@
 
 \subsection{Cryostat}
 
-The Single Phase TPC test at CERN will use a membrane tank technology to contain  725 tons of LAr, equivalent to about $520 m^3$. The design is based on a scaled up version of the LBNE 35-ton Prototype and the Fermilab Short-Baseline Near Detector.  
+The Single Phase TPC test at CERN will use a membrane tank technology to contain  725 tons of LAr, equivalent to about $520 m^3$. The design is based on a scaled up version of the LBNE 35-ton Prototype\cite{montanari_35ton} % add \cite{montanari_sbn_perf} if public access in docdb 9270 (AH)
+and the Fermilab Short-Baseline Near Detector\cite{acciarri_sbn_proposal}.  
 %We propose that the cryostat be housed in the extension of the EHN1 Bat 887 at CERN, where the cryogenic system components will also be located. (moved to sec 7)
 The cryostat will use a steel outer supporting structure with a metal liner inside to isolate the insulation volume, similar to the one of the dual phase detector prototype WA105 $1\times1\times3$ and to the Fermilab Short-Baseline Near Detector. The support structure will rest on I-beams to allow for air circulation underneath in order to maintain the temperature within the allowable limits.
 %The scope of the EHN1 cryostat subsystem includes the design, procurement, fabrication, testing, delivery and oversight of a cryostat to contain the liquid argon and the TPC. (moved to sec 8)
