--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -159,7 +159,7 @@ muon &   0.1, 0.3, 0.5, 1, 2, 5, 10  &  10K & $E_\mu$ calibration, MCS \\ \hline
 muon &  1  &  10K  & vary angle, reconstruction \\ \hline
 proton & 0.1, 0.2, 0.3, 0.5, 1, 2   &  10K & response, PID \\ \hline
 proton &  1  &  10K & vary angle, reconstruction \\ \hline
-kaon  & 0.1, 0.2, 0.3, 0.5, 1 & ?   &   response, PID  \\ \hline
+kaon  & 0.1, 0.2, 0.3, 0.5, 1 & 5k   &   response, PID  \\ \hline
 \end{tabular}
 \caption{Run plan requirements.}
 \label{tab:runplan}
@@ -193,9 +193,31 @@ The charge  particle identification efficiencies  has been mapped for only limit
 
 \subsubsection{e/$\gamma$ separation}
 
-The separation of the electrons from photons is the most important feature of the LAr TPC detectors for the search of the CP violation phase where we look for appearance of the $\nu_e$ in the $\nu_\mu$ beam.  Showers from electrons are part of the signal whilst the single photons might contribute to the background sample. The photons can undergo two process: pair production and Compton scattering. The dominant process for photons with energies of several hundreds MeV  is the e$^+$ e$^-$ pair production, but Compton scattering also occur at this energies. For pair production the e/$\gamma$ separation is achieved by looking at the beginning of the electromagnetic shower, where for election we see energy deposition typical for single MIP and for photon we see energy deposition consisted with two MIP. The separation of e/$\gamma$ has been measured in the ArgoNEUT experiment using neutrino scattering data with low statistics. Currently the separation efficiency is estimated to be at the level of of 94 \% (? cite and check the number). In case of Compton scattering off of atomic electrons the signal is much more difficult to distinguish from the CC $\nu_e$ scattering signal.
+The search for a CP violation phase using $\nu_e$ appearance 
+in a $\nu_\mu$ beam requires good electron/photon separation.
+Backgrounds originating from photons produced primarily from 
+final state $\pi^0$'s must be identified and removed from the signal
+electron sample. 
 
-The separation of  the e/$\gamma$ measured by ArgoNEUT is not sufficient for the ELBNF experiment. Here we propose a measurement of the separation efficiency  as the function of energy and angle.  {\bf we need someone to look into this}
+
+The photons can undergo two process: pair production and Compton scattering. 
+The dominant process for photons with energies of several hundreds MeV  is 
+the e$^+$ e$^-$ pair production, but Compton scattering also occur at this 
+energies. For pair production the e/$\gamma$ separation is achieved by looking 
+at the beginning of the electromagnetic shower, where for election we see energy 
+deposition typical for single MIP and for photon we see energy deposition consisted 
+with two MIPs. In case of Compton scattering off of atomic electrons the 
+signal is much more difficult to distinguish from the CC $\nu_e$ scattering signal.
+
+Electron-photon separation has been studied in LAr TPCs
+(Icarus and Argoneut) as shown in Fig.~\ref{fig:egam1}.
+Currently the 
+separation efficiency is estimated to be at the level of of 94 \% (? cite and 
+check the number). 
+This may depend on particular features of the geometry including wire pitch, etc.
+Therefore, it is critically important 
+to study e/$\gamma$ separation in a prototype LAr TPC detector.
+{\bf we need someone to look into this}
 
 
 
