--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -151,8 +151,9 @@ Table~\ref{tab:runplan} summarizes the required exposures to beam particles.
 \begin{tabular}{|c|c|c|l|}
 \hline
 Particle & Momenta (GeV) & Exposure & Purpose \\ \hline
-charged $\pi$       & 0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10     &  10K  & hadronic shower \\ \hline
-charged $\pi$ &  1  &  10K  & vary angle, reconstruction \\ \hline
+$\pi^+$       & 0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10     &  100K  & hadronic shower/$\pi^0$ content \\ \hline
+$\pi^-$       & 0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10     &  100K  & hadronic shower/$\pi^0$ content \\ \hline
+$\pi^+$ &  0.2, 0.5, 1, 2, 5 &  10K  & vary angle (x5), reconstruction \\ \hline
 electron       &    0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10        &    100K   & EM shower/e-$\gamma$ PID     \\ \hline
 electron &  1  &  10K  & vary angle, reconstruction \\ \hline
 muon &   0.1, 0.3, 0.5, 1, 2, 5, 10  &  10K & $E_\mu$ calibration, MCS \\ \hline
@@ -161,7 +162,7 @@ proton & 0.1, 0.2, 0.3, 0.5, 1, 2   &  10K & response, PID \\ \hline
 proton &  1  &  10K & vary angle, reconstruction \\ \hline
 kaon  & 0.1, 0.2, 0.3, 0.5, 1 & 5k   &   response, PID  \\ \hline
 \end{tabular}
-\caption{Run plan requirements.}
+\caption{Requirements summary.}
 \label{tab:runplan}
 \end{table}
 
