Remove water mark package which offends the delicate sensibilities of the ancient TeX distributed by Fermilab.

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -11,15 +11,14 @@
 \textheight=9.25in
 
 \usepackage[dvips]{graphics}
-\usepackage{epsfig}
 \usepackage{rotating}
 \usepackage{amssymb,amsmath}
 \usepackage{graphicx}
 \usepackage{cite}
-\usepackage{amsmath}
 \usepackage{color}
 
-\usepackage[firstpage]{draftwatermark}
+%% draftwatermark causes infinite loop on SL6's ancient TeXLive
+%\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
 \usepackage{tikz}
 
@@ -49,9 +48,9 @@
 \maketitle
 
 
-\SetWatermarkText{DRAFT}
-\SetWatermarkLightness{0.8}
-\SetWatermarkScale{5}
+%\SetWatermarkText{DRAFT}
+%\SetWatermarkLightness{0.8}
+%\SetWatermarkScale{5}
 
 
 \begin{abstract}
