Updated run requirements table

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -151,16 +151,21 @@ Table~\ref{tab:runplan} summarizes the required exposures to beam particles.
 \begin{tabular}{|c|c|c|l|}
 \hline
 Particle & Momenta (GeV) & Exposure & Purpose \\ \hline
-$\pi^+$       & 0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10     &  100K  & hadronic shower/$\pi^0$ content \\ \hline
-$\pi^-$       & 0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10     &  100K  & hadronic shower/$\pi^0$ content \\ \hline
-$\pi^+$ &  0.2, 0.5, 1, 2, 5 &  10K  & vary angle (x5), reconstruction \\ \hline
-electron       &    0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10        &    100K   & EM shower/e-$\gamma$ PID     \\ \hline
-electron &  1  &  10K  & vary angle, reconstruction \\ \hline
-muon &   0.1, 0.3, 0.5, 1, 2, 5, 10  &  10K & $E_\mu$ calibration, MCS \\ \hline
-muon &  1  &  10K  & vary angle, reconstruction \\ \hline
-proton & 0.1, 0.2, 0.3, 0.5, 1, 2   &  10K & response, PID \\ \hline
-proton &  1  &  10K & vary angle, reconstruction \\ \hline
-kaon  & 0.1, 0.2, 0.3, 0.5, 1 & 5k   &   response, PID  \\ \hline
+$\pi^+$       & 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 7     &  10K  & hadronic cal, $\pi^0$ content \\ \hline
+$\pi^-$       &  0.2, 0.3, 0.4, 0.5, 1, 2     &  10K  & hadronic cal, $\pi^0$ content \\ \hline
+$\pi^+$ &   1 \& 2  &  10K  & vary angle ($\times$5), reco \\ \hline
+e$^+$ or e$^-$       &    0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 7        &    10K   & e-$\gamma$ separation/EM shower     \\ \hline
+ e$^+$ or e$^-$  &  1 \& 2  &  10K  & vary angle($\times$5), reco \\ \hline
+%e$^+$ or e$^-$   (w/rad) &  3  &  20K  & tagged photons \\ \hline
+$\mu^-$  &   0.2, 0.5, 1, 2  &  10K & $E_\mu$, Michel el., charge sign \\ \hline
+$\mu^+$ &   0.2, 0.5, 1, 2   &  10K & $E_\mu$, Michel el.,charge sign  \\ \hline
+$\mu^-$ or $\mu^+$ &   0.5, 1, 2, 5, 7  &  5K & $E_\mu$ MCS \\ \hline
+$\mu^-$ or $\mu^+$  &  1 \& 2  &  5K  & vary angle ($\times$5), reco \\ \hline
+proton & 0.2, 0.3, 0.5, 1, 2   &  10K & response, PID \\ \hline
+proton &  3  &  100K & $\pi^o$/$\gamma$ sample \\ \hline
+proton &  1 \& 2 &  10K & vary angle ($\times$5), reco \\ \hline
+antiproton &  low-energy tune  &  100 & antiproton stars \\ \hline
+K$^+$  &  0.5, 0.7, 1 & 5k   &   response, PID, pdk  \\ \hline
 \end{tabular}
 \caption{Requirements summary.}
 \label{tab:runplan}
