updated installation section

--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -126,9 +126,9 @@ The installation sequence is planned to proceed as follows:
 In general, APA panels will be installed in order starting with the panel furthest from the hatch side of the cryostat and progressing back towards the hatch. The upper field cage will be installed in stages as the installation of APA and CPAs progresses.  After the APAs are attached to the support rods the electrical connections will be made to electrical cables that were already dressed to the support beams and electrical testing will begin. Periodic electrical testing will continue to assure that nothing gets  damaged during the additional work around the installed APAs.  
 
 The TPC installation will be performed in three stages, each in a separate location; the locations, or 
-zones. First, in the clean room vestibule, a crew will move the APA and CPA panels from storage racks, rotate to the vertical position and move them into the cryostat. %Secondly, in the panel-staging area immediately below the equipment hatch of the cryostat, 
+zones. First, in the clean room vestibule, a crew will move the APA and CPA panels from storage racks, rotate to the vertical position and move them into the cryostat. Secondly, in the panel-staging area immediately below the equipment hatch of the cryostat, 
 % CHECK THIS! I TRIED TO INTERPRET RUSS'S COMMENTS. -- ANNE
-A second crew will transfer the lower panels from the crane to the staging platform, where the crew inside the cryostat will connect the upper and lower panels together, route cables to the top of stacked panels and finally transfer the stacked panels on to the rails within the cryostat. A third crew will reposition the movable scaffolding and use the scaffold to make the mechanical and electrical  connections at the top for each APA and CPA as they are moved into position.  
+a second crew will transfer the panels from the crane to the staging platform, where the crew inside the cryostat will connect the to the rails within the cryostat. A third crew will reposition the movable scaffolding and use the scaffold to make the mechanical and electrical connections at the top for each APA and CPA as they are moved into position.  
 
 The requirements for alignment and survey of the TPC are under development. Since there are many cosmic rays in the surface detector and beam events, significant corrections can be made for any misalignment of the TPC. The current plan includes using a laser guide or optical transit and the adjustment features of the support rods for the TPC to align the top edges of the APAs in the TPC to be straight, level and parallel within a few mm. The alignment of the TPC in other dimensions will depend on the internal connecting features of the TPC.  The timing of the survey will depend on understanding when during the installation process the hanging TPC elements are in a dimensionally stable state. The required accuracy of the survey is not expected to be more precise than a few mm.  
 
