input davids changes for cryo

--- a/cryo.tex
+++ b/cryo.tex
@@ -1,11 +1,10 @@
 
 \subsection{Cryostat}
 
-The Single Phase TPC test at CERN will use a membrane tank technology to contain  725 tons of LAr, equivalent to about $520 m^3$. The design is based on a scaled up version of the LBNE 35-ton Prototype\cite{montanari_35ton} % add \cite{montanari_sbn_perf} if public access in docdb 9270 (AH)
+The Single Phase TPC test at CERN will use a membrane tank technology to contain  673 tons of LAr, equivalent to about $483 m^3$. The design is based on a scaled up version of the LBNE 35-ton Prototype\cite{montanari_35ton} 
+% (this is a comment) add \cite{montanari_sbn_perf} if public access in docdb 9270 (AH)
 and the Fermilab Short-Baseline Near Detector\cite{acciarri_sbn_proposal}.  
-%We propose that the cryostat be housed in the extension of the EHN1 Bat 887 at CERN, where the cryogenic system components will also be located. (moved to sec 7)
 The cryostat will use a steel outer supporting structure with a metal liner inside to isolate the insulation volume, similar to the one of the dual phase detector prototype WA105 $1\times1\times3$ and to the Fermilab Short-Baseline Near Detector. The support structure will rest on I-beams to allow for air circulation underneath in order to maintain the temperature within the allowable limits.
-%The scope of the EHN1 cryostat subsystem includes the design, procurement, fabrication, testing, delivery and oversight of a cryostat to contain the liquid argon and the TPC. (moved to sec 8)
 This section describes the proposed design, whose scope encompasses the following components:
 
 \begin{itemize}
@@ -21,25 +20,25 @@ Two membrane cryostat vendors are known: GTT (Gaztransport \& Technigaz) from Fr
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=.9\textwidth]{figures/membrane-exploded-view} % (figure 1)
+\includegraphics[width=.9\textwidth]{figures/membrane-exploded-view}
 \caption[Exploded view of the membrane cryostat technology]{\label{fig:lar-org} Exploded view of the membrane cryostat technology}
 \end{center}
 \end{figure}
 
-The conceptual proposed design for the Single Phase Test at CERN cryostat is a rectangular vessel measuring 9.5 m in length (parallel to the beam direction), 7.3 m in width, and 8.40 m in height; containing a total mass of 725 tons of liquid argon. Figure~\ref{fig:cryostat-views} shows side and end views of the cryostat respectively. Figure 3 shows a 3D view. To minimize the contamination from warm surfaces, during operation the temperature of all surfaces in the ullage shall be lower than 100 K. 
-The top plate will contain two hatches, one to install the TPCs and the other to access the tank; it will also contain a manhole to enter the tank after closing the hatches, and several penetrations for the cryogenic system and the detector. %The top plate will contain two hatches to install the TPCs and enter the tank, a manhole and several penetrations for the cryogenic system and the detector.
+The conceptual proposed design for the Single Phase Test at CERN cryostat is a rectangular vessel measuring 8.8 m in length (parallel to the beam direction), 7.7 m in width, and 8.0 m in height; containing a total mass of 673 tons of liquid argon. Figure~\ref{fig:cryostat-views} shows side and end views of the cryostat respectively. Figure 15 shows a 3D view. To minimize the contamination from warm surfaces, during operation the temperature of all surfaces in the ullage shall be lower than 100 K. 
+The top plate will contain two hatches for the installation of the TPCs; it will also contain a manhole to enter the tank after closing the hatches, and several penetrations for the cryogenic system and the detector. 
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=.53\textwidth]{figures/cryostat-side-view} % (figure 2a)
-\includegraphics[width=.42\textwidth]{figures/cryostat-westend-view}  %(figure 2b)
+\includegraphics[width=.53\textwidth]{figures/cryostat-side-view} 
+\includegraphics[width=.42\textwidth]{figures/cryostat-westend-view}  
 \caption[Views of cryostat]{\label{fig:cryostat-views} Side (left) and end (right) views of cryostat}
 \end{center}
 \end{figure}
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=.75\textwidth]{figures/cryostat-isometric-view} % (figure 3)
+\includegraphics[width=.75\textwidth]{figures/cryostat-isometric-view} 
 \caption[Isometric view of cryostat]{\label{fig:cryostat-views} Isometric view of the membrane cryostat}
 \end{center}
 \end{figure}
@@ -62,11 +61,11 @@ Membrane material    &  SS 304/304L, 316/316L or equivalent. \\ \hline
 Fluid & Liquid argon (LAr)  \\ \hline
 Other materials upon approval.\\ \hline
  Outside reinforcement (support structure)  &  Steel enclosure with metal liner to isolate the outside from the insulation space, standing on legs to allow for air circulation underneath. \\ \hline
- Total cryostat volume  &  583 m3 \\ \hline
- Total LAr volume  &  520 m3 \\ \hline
-LAr total mass   & 725,000 kg  \\ \hline
-Minimum inner dimensions (flat plate to flat plate).   &  7.3 m (W) x 9.5 m (L) x 8.4 m (H) \\ \hline
-Depth of LAr   &  7.5 m (0.9 m ullage, same as LBNF) \\ \hline
+ Total cryostat volume  &  538 m3 \\ \hline
+ Total LAr volume  &  483 m3 \\ \hline
+LAr total mass   & 673,000 kg  \\ \hline
+Minimum inner dimensions (flat plate to flat plate).   &  7.7 m (W) x 8.8 m (L) x 8.4 0 (H) \\ \hline
+Depth of LAr   &  7.2 m (0.82 m ullage, same as LBNF) \\ \hline
 Primary membrane   &   1.2 mm thick SS 304L corrugated stainless steel\\ \hline
 Secondary barrier system   &  GTT design; 0.07 mm thick aluminum between fiberglass cloth. Overall thickness 1 mm located between insulation layers.  \\ \hline
  Insulation  &  Polyurethane foam (0.9 m thick from preliminary calculations) \\ \hline
@@ -92,7 +91,7 @@ and roof in order to control the heat ingress and hence required refrigeration h
 To avoid bubbling of the liquid Argon inside the tank, the maximum static heat leak is $10 W/m^2$ for the floor and the sides and $15 W/m^2$ for the roof, higher to account for the penetrations that increase the heat budget. Preliminary calculations show that these values it can be obtained using 0.9 m thick insulation panels of polyurethane foam.
 Given an 
 average thermal conductivity coefficient for the insulation material of 0.0283 W/(m·K), the heat input 
-from the surrounding steel is expected to be about 3.4~kW total. It assumes that the hatches are foam 
+from the surrounding steel is expected to be about 3.2~kW total. It assumes that the hatches are foam 
 insulated as well. This is shown in Table~\ref{tbl:heat-load-calc}.
 
 The insulation material is a solid reinforced polyurethane foam manufactured as composite panels. The 
@@ -121,12 +120,12 @@ GAr at the rate of one volume exchange per day.
 \hline
  \textbf{Element} & \textbf{Area ($m^2$)}  &  \textbf{K ($W/mK$)} & \textbf{$\Delta$ T ($K$)}
  & \textbf{Heat Input ($W$)}\\ \hline
-Base   & 83  & 0.0283   &205   & 550 \\ \hline
-End walls  &  190 & 0.0283  &  205 &  1,247\\ \hline
-Side walls   & 149  & 0.0283  &  205 & 983 \\ \hline
+Base   & 83  & 0.0283   &205   & 534 \\ \hline
+End walls  &  153 & 0.0283  &  205 &  986 \\ \hline
+Side walls   & 172  & 0.0283  &  205 & 1,108 \\ \hline
 Roof  &  83 & 0.0283  & 205  &  550\\ \hline
    &   &   &   &  \\ \hline
-Total   &   &   &   & 3,330 \\ \hline
+Total   &   &   &   & 3,162 \\ \hline
 \end{tabular}
 \end{table}
 
@@ -149,13 +148,14 @@ membrane, intermediate insulation layers and vapor barrier continue across the t
 providing a leak tight seal. The secondary barrier is not used nor required at the top. The cryostat roof is 
 a removable steel truss structure that also supports the detector. Stiffened steel plates are welded to the 
 underside of the truss to form a flat vapor barrier surface onto which the roof insulation attaches directly. 
-The penetrations will be clustered in the back region. The top cap will have a large opening for TPC 
-installation, a secondary smaller opening for personnel access and a manhole to enter the tank after the 
+The penetrations will be clustered in the back region. The top cap will have two large openings for TPC 
+installation, and a manhole to enter the tank  after the 
 hatches have been closed.
 
 The truss structure rests on the top of the supporting structure where a positive structural connection 
 between the two is made to resist the upward force caused by the slightly pressurized argon in the ullage 
-space. The hydrostatic load of the LAr in the cryostat is carried by the floor and the sidewalls. Everything else within the cryostat (TPC planes, electronics, sensors, cryogenic and gas plumbing connections) is 
+space. The hydrostatic load of the LAr in the cryostat is carried by the floor and the sidewalls. In order to meet the maximum deflection between APA and CPA and to decouple the detector form possible sources of vibrations, the TPCs will be connected to an external bridge over the top of the plate supported on the floor of the building. Everything else within the cryostat %(TPC planes, 
+(electronics, sensors, cryogenic and gas plumbing connections) is 
 supported by the steel plates under the truss structure. All piping and electrical penetration into the 
 interior of the cryostat are made through this top plate, primarily in the region of the penetrations to 
 minimize the potential for leaks. Studs are welded to the underside of the top plate to bolt the insulation 
@@ -169,10 +169,10 @@ Table~\ref{tbl:cryostat-top-parameters} presents the list of the design paramete
 \caption{Design parameters for the top of the cryostat}
 \label{tbl:cryostat-top-parameters}
 \centering
-\begin{tabular}{|p{.4\textwidth}|p{.5\textwidth}|}
+\begin{tabular}{|p{.3\textwidth}|p{.7\textwidth}|} % AH {|p{.4\textwidth}|p{.5\textwidth}|}
 \hline
  \textbf{Design Parameter} & \textbf{Value} \\ \hline
- Configuration &  Removable metal plate reinforced with trusses/I-beams anchored to the membrane cryostat support structure. Contains multiple penetrations of various sizes and a manhole. Number, location and size of the penetrations TBD. Provisions shall be made to allow for removal and re-welding six (6) times.\\ \hline
+ Configuration &  Removable metal plate reinforced with trusses/I-beams anchored to the membrane cryostat support structure. Contains multiple penetrations of various sizes and a manhole. Number, location and size of the penetrations TBD. The hatches shall be designed to be removable. If welded, provisions shall be made to allow for removal and re-welding six (6) times.\\ \hline
 Plate/Trusses non-wet material  &  Steel if room temperature.
 SS 304/304 or equivalent if at cryogenic temperature
 \\ \hline
@@ -183,31 +183,37 @@ Other materials upon approval.
 Design pressure  & 350 mbarg (~5 psig) \\ \hline
 Design temperature  & 77 K (liquid nitrogen temperature for flexibility) \\ \hline
 Inner dimensions  & To match the cryostat \\ \hline
-Maximum allowable roof deflection  & 0.028 m (span/360 from LBNF) \\ \hline
+Maximum allowable roof deflection  & 0.003 m (differential between APA and CPA) \\ \hline
 Maximum static heat leak  & \textless 15 W/m2  \\ \hline
  Temperatures of all surfaces in the ullage during operation & \textless 100 K \\ \hline
 Additional design loads  &  -	Top self-weight \\
-& -	TPC (~3,000 kg on each anchor)\\
-& -	TPC anchors (TBD)\\
-& -	Live load (488 kg/m2)\\
+ & -	Live load (488 kg/m2)\\
 & -	Electronics racks (400 kg in the vicinity of the feed through)\\
-& -	Services (150 kg on every feed through)\\
+& -	Services (150 kg on every feed through)
 \\ \hline
-TPC anchors  & Capacity: 3,000 kg each anchor.
+TPC anchors  & %Capacity: AH
 Number and location TBD. Minimum 6.
- \\ \hline
- Hatch opening for TPC installation &  3,550 m x 2,000 m (location TBD)\\ \hline
+xc \\ \hline
+ Hatch opening for TPCs installation &  3.550 m x 2.000 m (location TBD)\\ \hline % , to . in numbers
 Grounding plate  &  1.6 mm thick copper sheet brazed to the bottom of the top plate\\ \hline
 Lifting fixtures  & Appropriate for positioning the top at the different parts that constitute it. \\ \hline
-Cold penetrations  & Location and design TBD. \\ \hline
+Penetrations  &  1 LAr In, 1 Purge GAr In, 1 Vent GAr In \\ 
+& 2 Pressure Safety Valves, 2 Vacuum Safety Valves \\ 
+& 1 GAr boil off to condenser \\ 
+& 1-2 Liquid level sensors \\ 
+& 1-2 Instrumentation \\ 
+& 1 Temperature sensors feedthroughs? \\ 
+& 1 LAr for cool down, 1 GAr for cool down \\ 
+& 1 TPC signal, 3 TPC feedthroughs \\
+& 1 Photon Detector for APA (Cold) \\
+& Calibration dc\\ \hline
 Lifetime / Thermal cycles  & Consistent with the liquid argon program TBD. \\ \hline
 \end{tabular}
 \end{table}
-%\floatbarrier<--------- requires a package that's not set: \usepackage{placeins}
 
 \textbf{Cryostat grounding and isolation requirements}
 
-The cryostat has to be grounded and electrically isolated from the building. %Table IV 
+The cryostat has to be grounded and electrically isolated from the building. 
 This section presents the list of the current grounding and isolation requirements for the cryostat. 
 Figure~\ref{fig:top-plate-gnd} shows the layout of the top plate grounding.
 
@@ -239,7 +245,7 @@ Figure~\ref{fig:top-plate-gnd} shows the layout of the top plate grounding.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=.95\textwidth]{figures/cryostat-top-plate-gnd} % (figure 4)
+\includegraphics[width=.95\textwidth]{figures/cryostat-top-plate-gnd} 
 \caption[Top plate grounding layout]{\label{fig:top-plate-gnd}Top plate grounding layout}
 \end{center}
 \end{figure}
@@ -266,30 +272,24 @@ critical; an outage of the purge blower would have negligible impact on LAr puri
 \subsection{Cryostat size from TPC dimensions (Move to begining of sec 4 per DM) }
 
 The minimum internal size of the cryostat is determined from size of the TPC.  At the bottom of the 
-cryostat there needs to be a minimum of 0.3 m between the frame of the CPA and closest point on the SS 
+cryostat there needs to be a minimum of 0.36 m between the frame of the CPA and closest point on the SS 
 membrane.  This is to prevent high voltage discharge between the CPA and the electrically grounded 
 membrane. It is foreseen that there would be some cryogenic piping and instrumentation under the TPC.  
-There is a height allowance of 0.1 m for this.  There will be access and egress space around the outside 
-of the TPC and the membrane walls.  On three sides, 1.0 m of space is reserved for this.  The final side of 
-the TPC will have piping and instrumentation for the cryogenic system.  There will be 1.3 m of space 
-reserved for this.  
+There is a height allowance of 0.165 m for this.  There will be access and egress space around the outside 
+of the TPC and the membrane walls.  On two sides, 0.15 m of space is reserved for this. The front will have 0.36 mm and the back, where piping and instrumentation for the cryogenic system will be located, 1.20 m.
 
-The support system for the TPC will be located at the top between the underside of the cryostat roof and 
-the top of the TPC.  The plan is to model this space similar to what is planned for the far site TPC.  There 
-will be 0.9 m of ullage space.  In order to prevent high voltage discharge, the upper most part of the CPA 
-needs to be submerged a minimum of 0.3 m below the liquid Argon surface.  The top of the TPC will be 
-separated from the membrane by a minimum of 1.2 m.  
+The support system for the TPC will be located outside the cryostat roof, with a bridge connected to the floor. 
+It is the same design solution currently looked at for the DUNE TPC in the LBNF cryostat.  The plan is to model this space similar to what is planned for the far site TPC.  There 
+will be 0.82 m of ullage space.  In order to prevent high voltage discharge, the upper most part of the CPA 
+needs to be submerged a minimum of 0.5 m below the liquid Argon surface.  The top of the TPC will be 
+separated from the membrane by a minimum of 1.1 m.  
 
 Adding all of these to the size of the TPC yields the minimum inner dimensions of the cryostat.  A 
-minimally sized cryostat would be 9.5 m long, 7.3 m wide and 8.4 m high.  This assumes the TPC will be 
+minimally sized cryostat would be 8.8m long, 7.7 m wide and 8.0 m high.  This assumes the TPC will be 
 positioned inside the cryostat with the CPAs and end field cages parallel to the walls of the cryostat.  Also 
 there is no space allotted for a beam window to enter the cryostat.  Clearance would need to be added if 
 it violates any of the current boundaries listed above.  
-These dimensions also preserve the ability to reverse the order of the APAs and CPAs inside the TPC.  The 
-current plan is to have the APAs located in the center of the cryostat with a CPA on each side.  Reversing 
-this to have the CPA in the center and APAs on each side may be required to achieve some of the 
-proposed physics.  The orientation of the TPC components will be finalized after various scenarios have 
-been sufficiently simulated.  
+The current plan is to have the CPAs located in the center of the cryostat with an APA on each side.    
 
 %%%%%%%%%%%%%%%%%
 \subsection{Cryogenic System}
@@ -300,7 +300,7 @@ detector as well. The experiment will rely on LN2 tankers for regular deliveries
 which will be sized to provide several days of cooling capacity in the event of a delivery interruption. 
 From the dewar storage the LN2 is then transferred to a distribution facility located in the experimental 
 hall. It includes a small buffer volume and an LN2 pumping station that transfers the LN2 to the argon 
-condenser and other services as needed. The low estimated heat leak of the vessel ($\sim$3.4~kW) and the 
+condenser and other services as needed. The low estimated heat leak of the vessel ($\sim$3.2~kW) and the 
 location inside an above ground building allow for use of an open loop system typical of other 
 installations operated at Fermilab (LAPD, LBNE 35 ton prototype, MicroBooNE) and at CERN (???). 
 Main goal of the LN2 system is to provide cooling power for the argon condenser, the initial cool down of 
@@ -355,14 +355,14 @@ Nominal LAr purification flow rate (filling/ops) & 5.5 day/volume exchange \\ \h
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=.75\textwidth]{figures/proposed-LN2-system} % (figure 3)
+\includegraphics[width=.75\textwidth]{figures/proposed-LN2-system} 
 \caption[Schematic diagram for the proposed LN2 system]{\label{fig:proposed-LN2-system}Schematic diagram for the proposed LN2 system}
 \end{center}
 \end{figure}
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=.75\textwidth]{figures/proposed-LAr-system} % (figure 3)
+\includegraphics[width=.75\textwidth]{figures/proposed-LAr-system} 
 \caption[Schematic diagram for the proposed LAr system]{\label{fig:proposed-LAr-system} Schematic diagram for the proposed LAr system}
 \end{center}
 \end{figure}
