rearranging and text edits

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -68,11 +68,13 @@ The proposed single phase liquid argon detector presently described corresponds 
 
 \newpage
 
+%\section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/B.Wilson}]}
 \section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/B.Wilson}]}
 	\input{introduction}
 %	\input{../150212_introduction_Greg}
 
-\section{CERN prototype detector and charged particle beam test [$\sim$10 pages; {\color{red} Donna/Jarek}]}
+%\section{CERN prototype detector and charged particle beam test [$\sim$10 pages; {\color{red} Donna/Jarek}]}
+\section{Scientific Motivation and Measurement Program [$\sim$10 pages; {\color{red} Donna/Jarek}]}
 	\input{detbeamtest}
 	
 
