--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -1,73 +1,14 @@
-
-\subsection*{TODO list}
-{\color{red}
-\begin{description}
-\item[Sensitivity plots.] 	
- Create plots for the CPV and HM sensitivities for 40kton detector and 1.2 MW beam. Plots should include various combinations of the assumed uncertainties: with current best measurements,  with best guesses about uncertainties we can archive and with  uncertainties which will be obtain using beam test experiment at CERN.
-\end{description}
-
-}
-
-\subsection{Requirements for the detector, beam and commissioning}
-\label{detbeam_main}
 The Single-Phase Cern Prototype detector is intended to provide input necessary to reduce systematic uncertainties for oscillation measurements 
 and additional measurements that support the physics program in DUNE. 
 The LAr TPC technology is not new but wasn't extensively used in the 1-10 GeV neutrino energy range.  
-The main source of uncertainties due to detector with the current values are shown in table \ref{table:deterr}
 
 
-\begin{table}[h]
-\centering
-\caption{Current known sources of detector uncertainties for liquid argon or TPC.}
-\label{table:deterr}
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{source of uncertainty } & \textbf{value} & \textbf{reference}  \\ \hline
-  e/$\gamma$ separation        &           &                   \\ \hline
-  e-m shower calibration        &           &            \\ \hline
-   hadronic shower calibration       &           &        \\ \hline
-low energy acceptance electron identification &   &  \\ \hline
- .....   &   &   \\ \hline
-\end{tabular}
-\end{table}
+\subsection{Summary of Detector and Beam Requirements }
+\label{detbeam_main}
 
-
-
-\begin{table}[h]
-\centering
-\caption{Current known sources of  uncertainties due to interaction of charged particle with argon.}
-\label{table:physicserr}
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{source of uncertainty } & \textbf{value} & \textbf{reference}  \\ \hline
- pion(Kaon) absorbtion       &           &                   \\ \hline
- pion(Kaon) charge exchange       &           &            \\ \hline
-pion (Kaon) production in secondary interactions  &   &  \\ \hline
- muon capture       &           &  Phys. Rev. C 35, 2212      \\ \hline
-energy scale  &   &   \\ \hline
-Michel electron tagging  &  &  \\ \hline
-
- .....   &   &   \\ \hline
-\end{tabular}
-\end{table}
-
-
-
-With current detector uncertainties from table \ref{table:deterr} the sensitivities for the CP violation phase measurement is shown in Fig. \ref{fig:cpsensitivity}  {\bf Task: make this plot} . The  proposed test beam detector will reduce uncertainties to XX\%  and improve our sensitivity to $\delta_{CP}$ as shown in Fig. \ref{fig:cpsensitivity} {\bf Task: make this plot.}
-
-
-
-\begin{figure}[h!]
-  \centering
-%\includegraphics[scale=0.4]{}
-\label{fig:cpsensitivity}
-  \caption{Sensitivites for the $\delta_{CP}$ measurement  for using current knowledge of the single-phase LAr-TPC detector technology and for reduced detector uncertainties from SPCP beamtest data.  The plots prepared for 40 kton fiducial mass and $xx\times 10^{21}$POT.}
-\end{figure}
-
-\newpage
-
-\subsubsection{Particles energy and direction}
-\label{detbeam_particles}
+%%%
+%\subsubsection{Particles energy and direction}
+%\label{detbeam_particles}
 The DUNE experiment will run beam in both neutrino and anti-neutrino 
 configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In Fig. \ref{fig:particle_momenta} the distributions of momenta and angles of particles created in neutrino interactions from simulated beam fluxes are shown. 
 \begin{figure}[h!]
@@ -89,6 +30,8 @@ from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ at the far detector loc
 
 %\newpage
 
+The detector is designed to mimic the current DUNE Far detector design but must be sufficiently large in both
+longitudinal and transverse dimensions to contain showering particles up to the energy range of interest ($\sim$7~GeV).
 Fig.~\ref{fig:containment} shows the simulated longitudinal and transverse containment for proton showers up to 10~GeV/c momentum.
 For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 550~cm and 
 radius of 200~cm.
@@ -133,7 +76,7 @@ radius of 200~cm.
 %radius of 200~cm.}
 \end{figure}
 
-\clearpage
+%\clearpage
 %\subsubsection{Particle rates}
 %\label{detbeam_rates}
 %Estimation of  beam particles rates  necessary to collect high enough statistics in a reasonable time to obtain goals of of the measurements.
@@ -378,4 +321,5 @@ The beam test cannot offer such low energy electron, but one can use the Michel 
 %$\mu^+$   & (0.2), 0.5, 1      &  10K    \\ \hline
 %\end{tabular}\caption{Stopping . }
 %\end{table}
+
 
